Add npm install

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "roboto-slab-fontface",
+  "name": "roboto-slab-fontface-kit",
   "version": "1.0.0",
   "description": "The Roboto Slab fontface",
   "main": "./roboto-slab.css",
